--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -76,14 +76,12 @@ jobs:
           key: Library-${{ matrix.targetPlatform }}
           restore-keys: Library-
       - uses: game-ci/unity-builder@v2
-        id: App
+        id: 
         env:
             UNITY_EMAIL: ${{ secrets.UNITY_USERNAME }}
             UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
             UNITY_SERIAL: ${{ secrets.UNITY_LICENSE_KEY }}
         with:
-          androidAppBundle: true
-          allowDirtyBuild: true
           targetPlatform: ${{ matrix.targetPlatform }}
       - uses: actions/upload-artifact@v2
         with:
@@ -96,17 +94,14 @@ jobs:
 
       # Upload Sauce Labs (appium übernimmt die Aufgabe)
 
-      - name: Rename Android => Android.aab
-        run: sudo mv build/Android build/Android.apk
-
       - name: List
         run: ls -l
  
       - name: List 2
-        run: ls build
+        run: ls build/Android
 
       - name: Upload apk
         run: sudo curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
              --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/upload'
-             --form 'payload= ${{ steps.App }} 
+             --form 'payload=@"build/${{ matrix.targetPlatform }}/Android.apk"' 
              --form 'name="CC Devops App"'
