--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,11 +1,14 @@
-﻿name: Build project
+﻿name: Build Pipeline
 
 on:
   push:
 
 env:
   SAUCE_USERNAME: ${{secrets.SAUCE_USERNAME}}
-  SAUCE_ACCESS_KEY: ${{secrets.SAUCE_ACCESS_KEY}}
+  SAUCE_ACCESS_KEY: ${{secrets.SAUCE_ACCESS_KEY}}            
+  UNITY_EMAIL: ${{ secrets.UNITY_USERNAME }}
+  UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+  UNITY_SERIAL: ${{ secrets.UNITY_LICENSE_KEY }}
 
 jobs:
 
@@ -13,7 +16,6 @@ jobs:
     name: Test in ${{ matrix.testMode }}
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
       matrix:
         testMode:
           - PlayMode
@@ -30,22 +32,16 @@ jobs:
             Library-
       - uses: game-ci/unity-test-runner@v2
         id: tests
-        env:
-            UNITY_EMAIL: ${{ secrets.UNITY_USERNAME }}
-            UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-            UNITY_SERIAL: ${{ secrets.UNITY_LICENSE_KEY }}
         with:
           testMode: ${{ matrix.testMode }}
           artifactsPath: ${{ matrix.testMode }}-artifacts
           githubToken: ${{ secrets.GITHUB_TOKEN }}
           checkName: ${{ matrix.testMode }} Test Results
       - uses: actions/upload-artifact@v3
-        if: always()
         with:
           name: Test results for ${{ matrix.testMode }}
           path: ${{ steps.tests.outputs.artifactsPath }}
       - uses: actions/upload-artifact@v3
-        if: always()
         with:
           name: Coverage results for ${{ matrix.testMode }}
           path: ${{ steps.tests.outputs.coveragePath }}     
@@ -74,10 +70,6 @@ jobs:
           key: Library-${{ matrix.targetPlatform }}
           restore-keys: Library-
       - uses: game-ci/unity-builder@v2
-        env:
-            UNITY_EMAIL: ${{ secrets.UNITY_USERNAME }}
-            UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-            UNITY_SERIAL: ${{ secrets.UNITY_LICENSE_KEY }}
         with:
           targetPlatform: ${{ matrix.targetPlatform }}
       - uses: actions/upload-artifact@v2
@@ -91,14 +83,8 @@ jobs:
 
       # Upload Sauce Labs (appium übernimmt die Aufgabe)
 
-      - name: List
-        run: ls -l
- 
-      - name: List 2
-        run: ls build/Android
-
       - name: Upload apk
-        run: sudo curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
+        run: curl -u "${{secrets.SAUCE_USERNAME}}:${{secrets.SAUCE_ACCESS_KEY}}" --location
              --request POST 'https://api.eu-central-1.saucelabs.com/v1/storage/upload'
              --form 'payload=@"build/${{ matrix.targetPlatform }}/Android.apk"' 
              --form 'name="Android.apk"'
